2009-05-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Make NTimesDerivables<N> inherits from NTimesDerivable<N-1>.
	* include/roboptim-core/n-times-derivable-function.hh,
	* include/roboptim-core/n-times-derivable-function.hxx:
	Add an explicit instanciation for N=2 and change the
	general case to make it inherits from N-1.
	* tests/visualization-gnuplot-function.cc: Restyle.

2009-05-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Replace MKDIR_P by mkdir_p.
	* Makefile.am,
	* build-aux/ebuild.mk,
	* build-aux/rpm.mk,
	* doc/Makefile.am: Here.

2009-05-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove trailing whitespace in generated Gnuplot script.
	* include/roboptim-core/visualization/gnuplot-commands.hh:
	Remove trailing whitespace if set is called without a value.
	* tests/visualization-gnuplot-function.stdout: Regenerate.

2009-05-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance Gnuplot generation.
	* include/roboptim-core/visualization/gnuplot-commands.hh:
	Implement unset.
	* include/roboptim-core/visualization/gnuplot-function.hh:
	Debug plot_xy.
	* include/roboptim-core/visualization/gnuplot.hh: Use
	wxt terminal by default in interactive mode.
	* tests/visualization-gnuplot-function.cc: Check set command.
	* tests/visualization-gnuplot-function.stdout: Regenerate.
	* tests/visualization-gnuplot-simple.cc: Check plot_xy.
	* tests/visualization-gnuplot-simple.stdout: Regenerate.

2009-04-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Gnuplot generation.
	* build-aux/boost.m4: Add support for Boost.Fusion.
	* configure.ac: Search for Boost.Fusion and Boost.Format.
	* include/Makefile.am: Distribute new headers.
	* include/roboptim-core/visualization/fwd.hh: Copy from src/function.cc.
	* include/roboptim-core/visualization/gnuplot-commands.hh: New.
	* include/roboptim-core/visualization/gnuplot-function.hh: New.
	* include/roboptim-core/visualization/gnuplot.hh: New.
	* packages/debian/control: Depends on Boost 1.35.