@@ -57,10 +57,10 @@ AC_PROG_LIBTOOL
 
 # Search for Boost
 BOOST_FORMAT
-BOOST_FUSION
 BOOST_MPL
 BOOST_OPTIONAL
 BOOST_STATICASSERT
+BOOST_TUPLE
 BOOST_TYPETRAITS
 BOOST_UTILITY
 BOOST_VARIANT
